apps/pfx-ambulance-ufe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milung-ambulance-ufe-deployment      # meno deployment-u od ktorého sa odvádza meno podu

spec:
  replicas: 2
  selector:
    matchLabels:
        pod: milung-ambulance-ufe-label    # tento riadok je len označenie štítku 
                                    # key-value pair pod=ambualnce ufe
                                    # určený pre výber podov s rovnakým štítkom
  template:                    # šablóna pre vytvorenie replík podov
    metadata:
      labels: 
        pod: milung-ambulance-ufe-label    # štítky podu
       annotations:
          linkerd.io/inject: enabled
    spec:
      containers:
      - name: milung-ambulance-ufe-container # meno kontaineru - v pod-e ich môže byť viac
        image: milung/ambulance-ufe
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:                  # určenie kvót pre využívané fyzické prostriedky
                                    # je dôležité pre riadenie záťaže v rámci kubernetes
                                    # klastra
            requests:               
                memory: "32M"
                cpu: "0.1"
            limits:
                memory: "320M"
                cpu: "0.3"
